feat(boosting): add XGBoost, LightGBM, CatBoost

--- a/.github/workflows/.static-type-check.yml
+++ b/.github/workflows/.static-type-check.yml
@@ -100,6 +100,9 @@ jobs:
           uv run poe static-type-check-python --package=audio.voice-activity-detector.hm-silero-vad
           uv run poe static-type-check-python --package=audio.voice-activity-detector.hm-webrtcvad
           uv run poe static-type-check-python --package=autonomy.camera-radar-fusion
+          uv run poe static-type-check-python --package=boosting.hm-catboost
+          uv run poe static-type-check-python --package=boosting.hm-lightgbm
+          uv run poe static-type-check-python --package=boosting.hm-xgboost
           uv run poe static-type-check-python --package=causal-language-modeling.qwen
           uv run poe static-type-check-python --package=cloud-computing.hm-ray.applications.calculate
           uv run poe static-type-check-python --package=cloud-computing.hm-ray.applications.process-flight-data
