--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -79,6 +79,7 @@ AllCops:
     - 'api/api-python/dist/**/*'
     - 'api/api-rust/models/**/*'
     - 'audio/whisper-cpp/models/**/*'
+    - 'boosting/hm-catboost/catboost_info/**/*'
     - 'caddy/public/**/*'
     - 'cloud-cost/komiser/komiser.db'
     - 'cloud-platform/aws/aws-secrets-manager/secrets/*-credentials.json'
