--- a/.markdownlint-cli2.jsonc
+++ b/.markdownlint-cli2.jsonc
@@ -84,6 +84,7 @@
     "api/api-python/dist/**/*",
     "api/api-rust/models/**/*",
     "audio/whisper-cpp/models/**/*",
+    "boosting/hm-catboost/catboost_info/**/*",
     "caddy/public/**/*",
     "cloud-cost/komiser/komiser.db",
     "cloud-platform/aws/aws-secrets-manager/secrets/*-credentials.json",
