--- a/.mergify.yml
+++ b/.mergify.yml
@@ -518,6 +518,15 @@ pull_request_rules:
           - check-success=Test Machine Learning / scikit-learn | Test
           - check-skipped=Test Machine Learning / scikit-learn | Test
       - or:
+          - check-success=Test Machine Learning / XGBoost | Test
+          - check-skipped=Test Machine Learning / XGBoost | Test
+      - or:
+          - check-success=Test Machine Learning / LightGBM | Test
+          - check-skipped=Test Machine Learning / LightGBM | Test
+      - or:
+          - check-success=Test Machine Learning / CatBoost | Test
+          - check-skipped=Test Machine Learning / CatBoost | Test
+      - or:
           - check-success=Test Machine Learning / cuML | Test
           - check-skipped=Test Machine Learning / cuML | Test
       - or:
