--- a/.ruff.toml
+++ b/.ruff.toml
@@ -74,6 +74,7 @@ exclude = [
   "api/api-python/dist/**/*",
   "api/api-rust/models/**/*",
   "audio/whisper-cpp/models/**/*",
+  "boosting/hm-catboost/catboost_info/**/*",
   "caddy/public/**/*",
   "cloud-cost/komiser/komiser.db",
   "cloud-platform/aws/aws-secrets-manager/secrets/*-credentials.json",
