--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -512,6 +512,8 @@ jobs:
               - 'computer-vision/hm-supervision/detect-objects/**'
             hm-swift:
               - 'large-language-model-post-training/fine-tuning/hm-swift/**'
+            hm-tinker:
+              - 'large-language-model-post-training/fine-tuning/hm-tinker/**'
             hm-torchtune:
               - 'large-language-model-post-training/fine-tuning/hm-torchtune/**'
             hm-triton:
@@ -823,6 +825,7 @@ jobs:
       hm-sunpy: ${{ steps.filter.outputs.hm-sunpy }}
       hm-supervision-detect-objects: ${{ steps.filter.outputs.hm-supervision-detect-objects }}
       hm-swift: ${{ steps.filter.outputs.hm-swift }}
+      hm-tinker: ${{ steps.filter.outputs.hm-tinker }}
       hm-torchtune: ${{ steps.filter.outputs.hm-torchtune }}
       hm-triton: ${{ steps.filter.outputs.hm-triton }}
       hm-unsloth: ${{ steps.filter.outputs.hm-unsloth }}
@@ -1235,6 +1238,7 @@ jobs:
       hm-streamlit-live-line-chart: ${{ needs.detect-changes.outputs.hm-streamlit-live-line-chart == 'true' }}
       hm-streamlit-map: ${{ needs.detect-changes.outputs.hm-streamlit-map == 'true' }}
       hm-swift: ${{ needs.detect-changes.outputs.hm-swift == 'true' }}
+      hm-tinker: ${{ needs.detect-changes.outputs.hm-tinker == 'true' }}
       hm-torchtune: ${{ needs.detect-changes.outputs.hm-torchtune == 'true' }}
       hm-unsloth: ${{ needs.detect-changes.outputs.hm-unsloth == 'true' }}
       hm-webrtcvad: ${{ needs.detect-changes.outputs.hm-webrtcvad == 'true' }}
