--- a/.mergify.yml
+++ b/.mergify.yml
@@ -682,6 +682,12 @@ pull_request_rules:
       - or:
           - check-success=Test Machine Learning / Post-Training Quantization | Test
           - check-skipped=Test Machine Learning / Post-Training Quantization | Test
+      - or:
+          - check-success=Test Machine Learning / Unsloth | Test
+          - check-skipped=Test Machine Learning / Unsloth | Test
+      - or:
+          - check-success=Test Machine Learning / torchtune | Test
+          - check-skipped=Test Machine Learning / torchtune | Test
       # - or:
       #     - check-success=Test Machine Learning / Axolotl | Test
       #     - check-skipped=Test Machine Learning / Axolotl | Test
@@ -692,11 +698,8 @@ pull_request_rules:
           - check-success=Test Machine Learning / SWIFT | Test
           - check-skipped=Test Machine Learning / SWIFT | Test
       - or:
-          - check-success=Test Machine Learning / torchtune | Test
-          - check-skipped=Test Machine Learning / torchtune | Test
-      - or:
-          - check-success=Test Machine Learning / Unsloth | Test
-          - check-skipped=Test Machine Learning / Unsloth | Test
+          - check-success=Test Machine Learning / Tinker | Test
+          - check-skipped=Test Machine Learning / Tinker | Test
       - or:
           - check-success=Test Machine Learning / Fine Tune Whisper | Test
           - check-skipped=Test Machine Learning / Fine Tune Whisper | Test
