--- a/data-processing/nats/nats-server/justfile
+++ b/data-processing/nats/nats-server/justfile
@@ -24,3 +24,6 @@ stream-info:
 
 consumer-list:
     nats consumer ls "{{ STREAM_NAME }}"
+
+stream-subscribe:
+    nats subscribe --stream="{{ STREAM_NAME }}"
