--- a/.renovaterc.json5
+++ b/.renovaterc.json5
@@ -19,41 +19,41 @@
   additionalBranchPrefix: '{{parentDir}}-',
   semanticCommitScope: '{{#if parentDir}}{{parentDir}}{{else}}deps{{/if}}',
   packageRules: [
-    // Group Android related packages
+    // Group Android-related packages
     {
-      groupName: 'android related packages',
+      groupName: 'android-related packages',
       matchPackageNames: [
         'com.android.application:com.android.application.gradle.plugin',
         'com.android.library:com.android.library.gradle.plugin',
       ],
     },
-    // Group Arrow related packages
+    // Group Arrow-related packages
     {
-      groupName: 'arrow related packages',
+      groupName: 'arrow-related packages',
       matchPackageNames: [
         'arrow',
         'arrow-flight',
       ],
     },
-    // Group async-graphql related packages
+    // Group async-graphql-related packages
     {
-      groupName: 'async-graphql related packages',
+      groupName: 'async-graphql-related packages',
       matchPackageNames: [
         'async-graphql',
         'async-graphql-axum',
       ],
     },
-    // Group CUDA related packages
+    // Group CUDA-related packages
     {
-      groupName: 'cuda related packages',
+      groupName: 'cuda-related packages',
       matchPackageNames: [
         'cudf-cu12',
         'cuml-cu12',
       ],
     },
-    // Group ESLint related packages
+    // Group ESLint-related packages
     {
-      groupName: 'eslint related packages',
+      groupName: 'eslint-related packages',
       matchPackageNames: [
         '@eslint/js',
         '@eslint/json',
@@ -84,9 +84,9 @@
         'eslint-webpack-plugin',
       ],
     },
-    // Group GraphQL related packages
+    // Group GraphQL-related packages
     {
-      groupName: 'graphql related packages',
+      groupName: 'graphql-related packages',
       matchPackageNames: [
         '@types/graphql-depth-limit',
         '@types/graphql-upload',
@@ -99,54 +99,54 @@
         'graphql-ws',
       ],
     },
-    // Group JAX related packages
+    // Group JAX-related packages
     {
-      groupName: 'jax related packages',
+      groupName: 'jax-related packages',
       matchPackageNames: [
         'flax',
         'jax',
         'optax',
       ],
     },
-    // Group LangChain related packages
+    // Group LangChain-related packages
     {
-      groupName: 'langchain related packages',
+      groupName: 'langchain-related packages',
       matchPackageNames: [
         'langchain',
         'langchain-community',
         'langchain-text-splitters',
       ],
     },
-    // Group LlamaIndex related packages
+    // Group LlamaIndex-related packages
     {
-      groupName: 'llamaindex related packages',
+      groupName: 'llamaindex-related packages',
       matchPackageNames: [
         'llama-index',
         'llama-index-embeddings-huggingface',
         'llama-index-llms-litellm',
       ],
     },
-    // Group Node.js related packages
+    // Group Node.js-related packages
     {
-      groupName: 'node.js related packages',
+      groupName: 'node.js-related packages',
       matchPackageNames: [
         '@types/node',
         'docker.io/node',
         'node',
       ],
     },
-    // Group OPAL related packages
+    // Group OPAL-related packages
     {
-      groupName: 'opal related packages',
+      groupName: 'opal-related packages',
       matchPackageNames: [
         'docker.io/permitio/opal-client',
         'docker.io/permitio/opal-server',
         'opal-common',
       ],
     },
-    // Group OpenTelemetry related packages
+    // Group OpenTelemetry-related packages
     {
-      groupName: 'opentelemetry related packages',
+      groupName: 'opentelemetry-related packages',
       matchPackageNames: [
         '@opentelemetry/api',
         '@opentelemetry/exporter-trace-otlp-http',
@@ -168,9 +168,9 @@
         '@opentelemetry/semantic-conventions',
       ],
     },
-    // Group Prefect related packages
+    // Group Prefect-related packages
     {
-      groupName: 'prefect related packages',
+      groupName: 'prefect-related packages',
       matchPackageNames: [
         'docker.io/prefecthq/prefect',
         'prefect',
@@ -178,52 +178,75 @@
         'prefect-kubernetes',
       ],
     },
-    // Group Prettier related packages
+    // Group Prettier-related packages
     {
-      groupName: 'prettier related packages',
+      groupName: 'prettier-related packages',
       matchPackageNames: [
         '@prettier/plugin-xml',
         'prettier',
       ],
     },
-    // Group Pulumi related packages
+    // Group Pulumi-related packages
     {
-      groupName: 'pulumi related packages',
+      groupName: 'pulumi-related packages',
       matchPackageNames: [
         'pulumi',
         'pulumi-aws',
       ],
     },
-    // Group pytest related packages
+    // Group pytest-related packages
     {
-      groupName: 'pytest related packages',
+      groupName: 'pytest-related packages',
       matchPackageNames: [
         'pytest',
         'pytest-cov',
       ],
     },
-    // Group Python related packages
+    // Group Python development packages
+    // 1) Group Python development packages per project
     {
-      // Group Python related packages per project
-      groupName: 'python related packages',
+      groupName: 'python development packages',
       matchPackageNames: [
-        'docker.io/python',
-        'python',
+        'poethepoet',
+        'pytest',
+        'pytest-cov',
       ],
     },
+    // 2) Group Python development packages for digest, minor, patch, pin updates across all projects
     {
-      // Group Python related packages (patch updates) across all projects
-      groupName: 'python related packages (patch updates)',
+      groupName: 'python development packages - digest, minor, patch, pin updates',
       matchPackageNames: [
-        'docker.io/python',
-        'python',
+        'poethepoet',
+        'pytest',
+        'pytest-cov',
       ],
-      matchUpdateTypes: ['patch'],
+      matchUpdateTypes: ['digest', 'minor', 'patch', 'pin'],
       additionalBranchPrefix: '',
+      semanticCommitScope: 'deps',
     },
-    // Group PyTorch related packages
+    // Group Python-related packages
+    // 1) Group Python-related packages per project
     {
-      groupName: 'pytorch related packages',
+      groupName: 'python-related packages',
+      matchPackageNames: [
+        'docker.io/python',
+        'python',
+      ],
+    },
+    // 2) Group Python-related packages for digest, patch, pin updates across all projects
+    {
+      groupName: 'python-related packages - digest, patch, pin updates',
+      matchPackageNames: [
+        'docker.io/python',
+        'python',
+      ],
+      matchUpdateTypes: ['digest', 'patch', 'pin'],
+      additionalBranchPrefix: '',
+      semanticCommitScope: 'deps',
+    },
+    // Group PyTorch-related packages
+    {
+      groupName: 'pytorch-related packages',
       matchPackageNames: [
         'torch',
         'torchvision',
@@ -231,9 +254,9 @@
         'xformers',
       ],
     },
-    // Group React Native related packages
+    // Group React Native-related packages
     {
-      groupName: 'react native related packages',
+      groupName: 'react native-related packages',
       matchPackageNames: [
         '@testing-library/react-native',
         'expo',
@@ -246,17 +269,17 @@
         'react-native-web',
       ],
     },
-    // Group Serde related packages
+    // Group Serde-related packages
     {
-      groupName: 'serde related packages',
+      groupName: 'serde-related packages',
       matchPackageNames: [
         'serde',
         'serde_json',
       ],
     },
-    // Group Storybook related packages
+    // Group Storybook-related packages
     {
-      groupName: 'storybook related packages',
+      groupName: 'storybook-related packages',
       matchPackageNames: [
         '@chromatic-com/storybook',
         '@storybook/react-vite',
@@ -264,9 +287,9 @@
         'storybook',
       ],
     },
-    // Group Stylelint related packages
+    // Group Stylelint-related packages
     {
-      groupName: 'stylelint related packages',
+      groupName: 'stylelint-related packages',
       matchPackageNames: [
         'stylelint',
         'stylelint-config-prettier',
