--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -341,7 +341,7 @@ jobs:
             hm-aws-parallelcluster:
               - 'cloud-platform/aws/aws-parallelcluster/pcluster/**'
             hm-catboost:
-              - 'boosting/hm-catboost/**'
+              - 'ensemble-learning/boosting/hm-catboost/**'
             hm-cocoindex-embed-markdown-to-postgres:
               - 'data-processing/hm-cocoindex/flows/embed-markdown-to-postgres/**'
             hm-crawl4ai:
@@ -405,7 +405,7 @@ jobs:
             hm-librosa:
               - 'audio/audio-signal-analysis/hm-librosa/**'
             hm-lightgbm:
-              - 'boosting/hm-lightgbm/**'
+              - 'ensemble-learning/boosting/hm-lightgbm/**'
             hm-llama-factory:
               - 'large-language-model-post-training/fine-tuning/hm-llama-factory/**'
             hm-llama-index-chat-pdf:
@@ -525,7 +525,7 @@ jobs:
             hm-whisperx:
               - 'audio/automatic-speech-recognition/hm-whisperx/**'
             hm-xgboost:
-              - 'boosting/hm-xgboost/**'
+              - 'ensemble-learning/boosting/hm-xgboost/**'
             hm-xxhash:
               - 'system-tool/hm-xxhash/**'
             hyperparameter-optimization:
