--- a/.github/workflows/.static-type-check.yml
+++ b/.github/workflows/.static-type-check.yml
@@ -100,9 +100,6 @@ jobs:
           uv run poe static-type-check-python --package=audio.voice-activity-detector.hm-silero-vad
           uv run poe static-type-check-python --package=audio.voice-activity-detector.hm-webrtcvad
           uv run poe static-type-check-python --package=autonomy.camera-radar-fusion
-          uv run poe static-type-check-python --package=boosting.hm-catboost
-          uv run poe static-type-check-python --package=boosting.hm-lightgbm
-          uv run poe static-type-check-python --package=boosting.hm-xgboost
           uv run poe static-type-check-python --package=causal-language-modeling.qwen
           uv run poe static-type-check-python --package=cloud-computing.hm-ray.applications.calculate
           uv run poe static-type-check-python --package=cloud-computing.hm-ray.applications.process-flight-data
@@ -170,6 +167,9 @@ jobs:
           uv run poe static-type-check-python --package=embedded-system.hm-serial
           uv run poe static-type-check-python --package=embedding.hm-imagebind
           uv run poe static-type-check-python --package=embedding.open-clip
+          uv run poe static-type-check-python --package=ensemble-learning.boosting.hm-catboost
+          uv run poe static-type-check-python --package=ensemble-learning.boosting.hm-lightgbm
+          uv run poe static-type-check-python --package=ensemble-learning.boosting.hm-xgboost
           uv run poe static-type-check-python --package=evolutionary-algorithm.genetic-algorithm
           uv run poe static-type-check-python --package=hardware-in-the-loop.national-instruments.hm-pyvisa
           uv run poe static-type-check-python --package=hardware-in-the-loop.national-instruments.hm-tdms
