feat(embedding): add Model2Vec

--- a/.github/workflows/.static-type-check.yml
+++ b/.github/workflows/.static-type-check.yml
@@ -166,6 +166,7 @@ jobs:
           uv run poe static-type-check-python --package=embedded-system.format-can-data
           uv run poe static-type-check-python --package=embedded-system.hm-serial
           uv run poe static-type-check-python --package=embedding.hm-imagebind
+          uv run poe static-type-check-python --package=embedding.hm-model2vec
           uv run poe static-type-check-python --package=embedding.open-clip
           uv run poe static-type-check-python --package=ensemble-learning.boosting.hm-catboost
           uv run poe static-type-check-python --package=ensemble-learning.boosting.hm-lightgbm
