--- a/.mergify.yml
+++ b/.mergify.yml
@@ -587,11 +587,14 @@ pull_request_rules:
           - check-success=Test Machine Learning / Byte-Pair Encoding | Test
           - check-skipped=Test Machine Learning / Byte-Pair Encoding | Test
       - or:
-          - check-success=Test Machine Learning / ImageBind | Test
-          - check-skipped=Test Machine Learning / ImageBind | Test
+          - check-success=Test Machine Learning / Model2Vec | Test
+          - check-skipped=Test Machine Learning / Model2Vec | Test
       - or:
           - check-success=Test Machine Learning / OpenCLIP | Test
           - check-skipped=Test Machine Learning / OpenCLIP | Test
+      - or:
+          - check-success=Test Machine Learning / ImageBind | Test
+          - check-skipped=Test Machine Learning / ImageBind | Test
       - or:
           - check-success=Test Machine Learning / Automatic Mixed Precision | Test
           - check-skipped=Test Machine Learning / Automatic Mixed Precision | Test
