--- a/.mergify.yml
+++ b/.mergify.yml
@@ -653,8 +653,8 @@ pull_request_rules:
           - check-success=Test Machine Learning / Silero VAD | Test
           - check-skipped=Test Machine Learning / Silero VAD | Test
       - or:
-          - check-success=Test Machine Learning / webrtcvad | Test
-          - check-skipped=Test Machine Learning / webrtcvad | Test
+          - check-success=Test Machine Learning / WebRTC VAD | Test
+          - check-skipped=Test Machine Learning / WebRTC VAD | Test
       - or:
           - check-success=Test Machine Learning / Senko | Test
           - check-skipped=Test Machine Learning / Senko | Test
